# CSC485_A4

./: .gitignore  CMakeLists.txt  test_data.txt
include/: GEMM.hpp  algorithm_choices.h  cuda_common.h  data_generator.h  data_types.h  dense_graph.h  sparse_graph.h
src/: cpu_baseline.cu  gpu_solution.cu  main.cu
